2005-04-20  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_disco.erl: Fixed domain listing when one virtual host is
	a subdomain of another

2005-04-18  Alexey Shchepin  <alexey@sevcom.net>

	* src/web/ejabberd_web_admin.erl: Added link to shared roster page

	* src/odbc/ejabberd_odbc.erl: ODBC connection string can be
	specified via odbc_server option now
	* src/ejabberd.cfg.example: Added ODBC usage example

	* doc/guide.tex: Updated

	* src/msgs/pl.msg: New Polish translation (thanks to Andrew Smyk)

2005-04-17  Alexey Shchepin  <alexey@sevcom.net>

	* (all): Merged virtual hosting support

2005-04-09  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_c2s.erl: Send new id for each new stream inside one
	session (thanks to Maxim Ryazanov)

	* src/tls/tls_drv.c: Now reads all certificates from certificate
	file instead of reading only first one (thanks to Karl-Johan
	Karlsson)

2005-04-06  Alexey Shchepin  <alexey@sevcom.net>

	* examples/transport-configs/init-scripts/jabber-gg-transport:
	Fixed typo (thanks to Sander Devrieze)

2005-04-05  Alexey Shchepin  <alexey@sevcom.net>

	* examples/transport-configs/configs/msn-transport.xml: Fixed typo
	(thanks to Sander Devrieze)

2005-04-02  Alexey Shchepin  <alexey@sevcom.net>

	* examples/transport-configs/: Updated (thanks to Sander Devrieze)

2005-03-31  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_ctl.erl: Bugfix

2005-03-17  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_muc/mod_muc_room.erl: Bugfix

2005-03-15  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_sm.erl: Bugfix

2005-03-12  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_router.erl: Bugfix

2005-01-14  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_irc/mod_irc_connection.erl: Added filtering of quit
	status

2005-01-04  Alexey Shchepin  <alexey@sevcom.net>

	* src/web/ejabberd_web_admin.erl: Copyright update
	* src/mod_vcard_ldap.erl: Likewise
	* src/mod_vcard.erl: Likewise
	* src/mod_pubsub/mod_pubsub.erl: Likewise